tests/expected_invalid_failing_match_missing_failure.diag.out
<input>:12:5: error: non-exhaustive failed(...) coverage; missing 'MissingKey'
        match parse() {
        ^^^^^^^^^^^^^^^
